# codec

./: .gitignore  CMakeLists.txt  Makefile  cgo_prebuilt.go  cgo_source.go  cgo_source.go.in  codec_test.go  fix_codec.go  go.mod
.claude/: settings.local.json
.github/: sanitizers.cmake
benchmarks/: CMakeLists.txt  bench_fix_codec.c  bench_main.c
cmake/: finkit-codecConfig.cmake.in  sanitizers.cmake
include/: codec.h  fix_codec.h
scripts/: test_coverage.sh
tests/: CMakeLists.txt  test_fix_codec.c  test_main.c
